--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.28.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "pg": "7.18.2",
